
syntax = "proto3";

package music_service.album.v1;

option go_package = "github.com/VrMolodyakov/vgm/music/app/gen/go/music/credit/v1;pb_music_credit";

message Credit {
    uint32 person_id = 1;
    uint32 album_id = 2;
    uint32 profession_id = 3;
}

